--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "bluebird": "^3.1.1",
     "debug": "^3.1.0",
     "fancy-log": "^1.3.2",
-    "ink-docstrap": "^1.1.4",
+    "ink-docstrap": "git://github.com/mparizeau-pdftron/docstrap.git#1643fa44c3be0afb24dd6c29fc97ceb29db05e84",
     "jsdoc": "^3.4.1",
     "map-stream": "0.0.7",
     "tmp": "0.0.33"
